feat(java-version): Downgrade Java version
Downgrade Java version from 17 to 11 and Spring Boot from 3.2.0 to 2.7.8

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.1.4'
     id "jacoco"
     id "org.sonarqube" version "4.4.1.3373"
@@ -10,7 +10,7 @@ group = 'cloud.inclusion'
 version = '1.0.0'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '11'
 }
 
 configurations {
@@ -27,8 +27,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
-    implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.11.0'
+    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.7.0'
+    implementation 'org.springdoc:springdoc-openapi-webflux-core:1.7.0'
+    implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     compileOnly 'org.projectlombok:lombok'
